Web socket messages when nodes are copied